--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0 !important;
+}
 .main-container{
     display: flex;
     flex-direction: column;
@@ -45,4 +48,10 @@
     font-size: 1rem;
     text-align: center;
     color: #ffffff;
+}
+
+@media screen and (max-width: 600px) {
+    .content-container {
+        width: 80%;
+    }
 }
